--- a/client/package.json
+++ b/client/package.json
@@ -4,9 +4,15 @@
   "type": "module",
   "private": true,
   "dependencies": {
-    "react": "^18.2.0",
+    "@emotion/react": "^11.14.0",
+    "@emotion/styled": "^11.14.1",
+    "@mui/material": "^7.3.1",
+    "@tanstack/react-query": "^5.85.3",
+    "axios": "^1.11.0",
+    "react": "^18.3.1",
     "react-dom": "^18.2.0",
-    "axios": "^1.5.0"
+    "react-hot-toast": "^2.6.0",
+    "react-router-dom": "^6.30.1"
   },
   "devDependencies": {
     "@vitejs/plugin-react": "^4.0.3",
